# WERDNA

./: README.md
bringup/: CMakeLists.txt  package.xml
bringup/configs/: config.rviz  ros2_controllers.yaml
bringup/launch/: gazebo.launch.py  launch.py  launch_sim.py  rsp.launch.py
bringup/worlds/: empty.world  obstacles.world
description/: CMakeLists.txt
description/meshes/: base_link.stl  left_hip_link_1.stl  left_knee_link_1.stl  right_hip_link_1.stl  right_knee_link_1.stl
description/urdf/: materials.xacro  ros2_control.xacro  werdna.gazebo  werdna.trans  werdna.xacro  werdna2.xacro
leg_control/: package.xml  setup.cfg  setup.py
leg_control/leg_control/: inverse_kinematics.py  motion_planner.py
werdna_control/: CMakeLists.txt  package.xml
werdna_control/launch/: werdna_control.launch.py
werdna_control/src/: werdna_balance.cpp  werdna_control.cpp
werdna_description/: CMakeLists.txt  package.xml  werdna.xacro
werdna_description/config/: werdna_joint_controller.yaml
werdna_description/launch/: display.launch.py  gazebo.launch.py  rsp.launch.py
werdna_description/urdf/: consts.xacro  physics.xacro  ros2_control.xacro  ros2_control_sim.xacro  werdna.xacro  werdna_core.xacro  werdna_gazebo.xacro  werdna_joints.xacro  werdna_links.xacro
werdna_msgs/: CMakeLists.txt
werdna_msgs/msg/: JoyCtrlCmds.msg
werdna_teleop/: CMakeLists.txt  package.xml
werdna_teleop/src/: werdna_teleop_joy.cpp
